[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/slider.png" type="Texture" id=1]
[ext_resource path="res://textures/slider_h.png" type="Texture" id=2]
[ext_resource path="res://audio/sound/hover.ogg" type="AudioStream" id=3]
[ext_resource path="res://scripts/cc_slider.gd" type="Script" id=4]
[ext_resource path="res://audio/sound/text_click.ogg" type="AudioStream" id=5]

[sub_resource type="StyleBoxLine" id=2]
grow_end = -4.0
thickness = 10

[sub_resource type="StyleBoxLine" id=4]
color = Color( 0, 0.5, 0.5, 1 )
thickness = 10

[node name="CCSlider" type="HSlider"]
margin_right = 567.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 1 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sound"

[node name="SoundMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sound"

[connection signal="focus_entered" from="." to="." method="_on_SliderSound_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_SliderSound_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SliderSound_mouse_exited"]
[connection signal="value_changed" from="." to="." method="_on_CCSlider_value_changed"]
